--- a/apps/core/package.json
+++ b/apps/core/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-x-app",
+  "name": "core",
   "version": "0.0.1",
   "description": "Web application using Electrode X",
   "homepage": "",
@@ -26,27 +26,14 @@
   },
   "license": "UNLICENSED",
   "engines": {
-    "node": ">= 12",
-    "npm": ">= 6"
+    "node": ">= 18",
+    "npm": ">= 9"
   },
   "prettier": {
     "printWidth": 100
   },
   "dependencies": {
-    "@babel/runtime": "^7.12.5",
-    "@xarc/app": "^11.0.0",
-    "@xarc/fastify-server": "^3.2.3",
-    "@xarc/react": "^1.0.0",
-    "@xarc/react-query": "^1.0.0",
-    "@xarc/react-redux": "^1.0.0"
+    "@babel/runtime": "^7.17.9"
   },
-  "devDependencies": {
-    "@types/node": "^14.14.6",
-    "@xarc/app-dev": "^11.0.0",
-    "@xarc/opt-postcss": "^2.0.0",
-    "@xarc/opt-stylus": "^2.0.0",
-    "prettier": "^2.2.1",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.1.3"
-  }
+  "devDependencies": {}
 }
